# tcnet-rust

./: .cursorrules  Cargo.toml
captures/: bridge_arena_measurements.md  bridge_arena_more_measurements.txt
references/: TCNet-docs-OCR.md
src/: auth.rs  error.rs  header.rs  lib.rs  node.rs  registry.rs  types.rs  wire.rs
src/packets/: app_data.rs  error.rs  metadata.rs  metrics.rs  mixer.rs  mod.rs  opt_in.rs  request.rs  status.rs  time.rs
